assets/css/main.scss
---
---

/*
 *    Minimal Mistakes Jekyll Theme
 *
 *  - Michael Rose
 *  - mademistakes.com
 *  - https://twitter.com/mmistakes
 *
*/

@import "vendor/breakpoint/breakpoint"; // media query mixins
@import "variables";
@import "mixins";
@import "vendor/susy/susy";

@import "reset";
@import "base";

@import "utilities";
@import "animations";
@import "tables";
@import "buttons";
@import "notices";
@import "masthead";
@import "navigation";
@import "footer";
@import "syntax";

@import "forms";

@import "page";
@import "archive";
@import "sidebar";

@import "vendor/font-awesome/fontawesome";
@import "vendor/font-awesome/solid";
@import "vendor/font-awesome/brands";
@import "vendor/magnific-popup/magnific-popup";
@import "print";

.paper-badge {
  background-color: #1565c0;
  color: white;
  font-size: 0.85em;
  padding: 2px 0.3rem;
  border-radius: 5px;
}

.paper-prebadge {
  background-color: #007f89;
  color: white;
  font-size: 0.85em;
  padding: 2px 0.3rem;
  border-radius: 5px;
}

.paper-journalbadge {
  background-color: #007f89;
  color: white;
  font-size: 0.85em;
  padding: 2px 0.3rem;
  border-radius: 5px;
}

.paper-asset {
  font-size: 0.6875em;
  padding: 2px 0.2rem;
  border-radius: 5px;
  color: #1565c0;
  border-color: #1565c0;
  border-style: solid;
  border-width: 1px;
  a {
    text-decoration: none;
  }
}

.paper-highlight {
  font-size: 0.6875em;
  padding: 2px 0.2rem;
  border-radius: 5px;
  color: #b73555;
  border-color: #1565c0;
  border-style: solid;
  border-width: 1px;
  a {
    text-decoration: none;
  }
}

.paper-box {
  display: flex;
  justify-content: left;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  border-bottom: 1px #efefef solid;
  padding: 2em 0 2em 0;

  .paper-box-image {
    justify-content: center;
    display: flex;
    width: 100%;
    order: 2;
    img {
      max-width: 400px;
      box-shadow: 3px 3px 6px #888;
      object-fit: cover;
    }
  }

  .paper-box-text {
    max-width: 100%;
    order: 1;
  }

  @include breakpoint($medium) {
    .paper-box-image {
      justify-content: left;
      min-width: 200px;
      max-width: 40%;
      order: 1;
    }

    .paper-box-text {
      justify-content: left;
      padding-left: 2em;
      max-width: 60%;
      order: 2;
    }
  }
}

$scroll_offset: 2em;
h1:before,
.anchor:before {
  content: "";
  display: block;
  position: relative;
  width: 0;
  height: $scroll_offset;
  margin-top: -$scroll_offset;
}

.badge {
  padding-left: 1rem;
  padding-right: 1rem;
  position: absolute;
  margin-top: 0.5em;
  margin-left: -0.5em;
  color: white;
  background-color: #00369f;
  font-size: 0.8em;
}

a:hover {
  font-weight: bolder;
}

.visitor-map {
  display: flex;
  justify-content: center;
  margin: 0 auto;
  max-width: 100%;
  overflow-x: auto;

  img {
    display: block;
    max-width: 100%;
    height: auto;
  }
}

